SERVER-17435 do not abort if opid changes while killing all ops in killAllUserOperations()

(cherry picked from commit eb9785c12b4b88d76e00321440c8d635f296448a)